--- a/FuzzyPaws2/Views/Home/Index.cshtml
+++ b/FuzzyPaws2/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
     <h3>Need a vet appointment? We got you! <br />        
     </h3>
     <p>You can book an appointment
-       <a asp-controller="#" asp-action="#">here</a>
+       <a asp-controller="Appointment" asp-action="Index">here</a>
        or talk to us directly via email  
        <a asp-controller="Home" asp-action="Contact"><i class="bi bi-envelope-plus"></i></a>
     </p>
