--- a/FuzzyPaws2/Views/MyPet/Create.cshtml
+++ b/FuzzyPaws2/Views/MyPet/Create.cshtml
@@ -22,14 +22,14 @@
         </div>
 
         <div class="mb-3">
-            <label asp-for="PetTypeId"></label>
-            <input asp-for="PetTypeId" class="form-control"/>
+            <label>Pet Type</label>
+            <select asp-for="PetTypeId" asp-items="Model.PetTypes" class="form-control"></select>
             <span asp-validation-for="PetTypeId" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
-            <label asp-for="PetBreedId"></label>
-            <input asp-for="PetBreedId" class="form-control"/>
+            <label>Pet Breed</label>
+            <select asp-for="PetBreedId" asp-items="Model.PetBreeds" class="form-control"></select>
             <span asp-validation-for="PetBreedId" class="text-danger"></span>
         </div>
 
