--- a/FuzzyPaws2/Views/MyPet/Details.cshtml
+++ b/FuzzyPaws2/Views/MyPet/Details.cshtml
@@ -10,7 +10,7 @@
     <div class="col-5">
         <img class="w-100" 
         src="@FileLocation.RetriveFileFromFolder@Model.Image" class="img-thumbnail"  asp-append-version="true"
-        alt="Card image cap">
+        alt="What are you waiting for? Add my pic!">
             </div>
                 <div class="col">
                     <div class = "align-items-center">
