--- a/FuzzyPaws2/Views/MyPet/Index.cshtml
+++ b/FuzzyPaws2/Views/MyPet/Index.cshtml
@@ -34,7 +34,7 @@ else
             <div class="card mb-3 me-2" style="max-width: 500px;">
               <div class="row g-0">
                 <div class="col-md-4">
-                    <img class="card-img-top" height="100%" width="100" src="@FileLocation.RetriveFileFromFolder@pet.Image" asp-append-version="true" alt="Card image cap" />  
+                    <img class="card-img-top" height="100%" width="100" src="@FileLocation.RetriveFileFromFolder@pet.Image" asp-append-version="true" alt="Take a picture of your new pet and show it off!" />  
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
