--- a/FuzzyPaws2/Views/Appointment/WaitingAppointments.cshtml
+++ b/FuzzyPaws2/Views/Appointment/WaitingAppointments.cshtml
@@ -62,3 +62,16 @@
     </tbody>
  }
  </table>
+
+ <div class="container p-3">
+    <div class="row pt-4">
+        <div class="col-6"></div>
+
+        <div class="col-6 text-end">
+             <a asp-controller="Appointment" asp-action="Index" class="btn btn-secondary"> 
+                  All appointments
+             </a>
+        </div>
+
+    </div>
+</div>
