--- a/FuzzyPaws2/Views/Pet/Buy.cshtml
+++ b/FuzzyPaws2/Views/Pet/Buy.cshtml
@@ -41,6 +41,11 @@
         <a asp-controller="Pet" asp-action="Index" asp-route-id="@Model.Id" class="btn btn-secondary">
             Cancel
         </a>
+        <br /><br />
+        <h6 class="text-success">
+            After buying this pet, it will automatically be added to the list of your pets. <br />
+            Don't forget to add a picture for it after you pick up your new pet from our shop!
+        </h6>
     </div>
 </form>
 @section Scripts{
