iTextSharp for pdf used, improvements on profit frontend

--- a/FuzzyPaws2/Views/Shared/_Layout.cshtml
+++ b/FuzzyPaws2/Views/Shared/_Layout.cshtml
@@ -92,7 +92,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - FuzzyPaws2 - <a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
+            &copy; 2022 - FuzzyPaws - <a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
