--- a/FuzzyPaws2/Views/Appointment/Profit.cshtml
+++ b/FuzzyPaws2/Views/Appointment/Profit.cshtml
@@ -34,6 +34,13 @@
 <h1 class = "text-success">
     All-time profit: @(Model.AllAppointments.Where(x => x.FinalPrice > 0).Sum(b => b.FinalPrice))$
 </h1>
+<div class="row">
+    <div class="col-md-12 text-end">
+        <button class="btn btn-outline-success" type="button">
+            @Html.ActionLink("Create PDF for finished appointments", "CreatePdf", "Appointment", null)
+        </button>
+    </div>
+</div>
 <br />
 @*<p>    
     Profit in July: @(Model.AllAppointments.Where(x => x.Time.Month == 7).Sum(b => b.FinalPrice))$
@@ -45,13 +52,31 @@
 *@
 <h3> Profit by Months: </h3>
 
-
 @{
     int i = 1;
+
 }
-@while( i < 13){
-    <h6 class="text-success">
-        @(getMonthName(i)): @(Model.AllAppointments.Where(x => x.Time.Month == i).Sum(b => b.FinalPrice))$
-    </h6>
-        i++;
-    }
+@while( i < DateTime.Now.Month + 1)
+{
+       <h6 class="text-success">
+           @(getMonthName(i)): @(Model.AllAppointments.Where(x => x.Time.Month == i).Sum(b => b.FinalPrice))$
+       </h6>
+    for(int d = 1; d < 31; d++)
+    {
+            @if (Model.AllAppointments.Where(x => x.Time.Month == i &&
+                                             x.Time.Day == d)
+                                      .Sum(b => b.FinalPrice) != 0) 
+                 {
+                         <li>
+                             @(getMonthName(i)) @(d): @(Model.AllAppointments
+                                     .Where(x => x.Time.Month == i &&
+                                                 x.Time.Day == d)
+                                     .Sum(b => b.FinalPrice))$
+                         </li>
+                 }
+        
+    };
+    i++;
+}
+
+<br />
