--- a/FuzzyPaws2/Views/PetType/Details.cshtml
+++ b/FuzzyPaws2/Views/PetType/Details.cshtml
@@ -13,6 +13,12 @@
                
                         <p class="card-text">@Model.Description</p>
 
+                        <br /><br /><br />
+                        <a href="/Pet?type=@Model.Name">
+                            <h4 class="text text-primary">
+                            Check out all our @(Model.Name.ToLower())s!
+                            </h4>
+                        </a>
 
                     </div>
             </div>  
