--- a/FuzzyPaws2/Views/User/User.cshtml
+++ b/FuzzyPaws2/Views/User/User.cshtml
@@ -21,6 +21,16 @@
     </div>
 </div>
 
+<form asp-action="User" method="get">
+      <div class="form-actions no-color">
+           <p>
+                Find by name: <input type="text" name="search" value="@ViewData["CurrentFilter"]" />
+                <input type="submit" value="Search" class="btn btn-primary" /> |
+                <a asp-action="User" class="btn btn-outline-primary">Full List</a>
+           </p>
+      </div>
+</form>
+
 <table class="table table-hover">
     <thead>
     <tr>
