Error with Dashboard

--- a/FuzzyPaws2/Views/Appointment/Notification.cshtml
+++ b/FuzzyPaws2/Views/Appointment/Notification.cshtml
@@ -10,12 +10,14 @@
     {
     <h1>
         There is no new waiting appointments.
-    </h1>
+        </h1>
     } else
     {
         <h1 class="text text-warning">You have 
-        @Model.AllAppointments.Where(x => x.status == Status.Waiting).Count() 
-        new waiting appointments!</h1>
+            @{
+            @Model.AllAppointments.Where(x => x.status == Status.Waiting).Count();
+            }
+            new waiting appointments!</h1>
         <br />
         <h2 class="text text-primary">Manage them now 
             <a asp-controller="Appointment" asp-action="WaitingAppointments">
