--- a/FuzzyPaws2/Views/Shared/_Layout.cshtml
+++ b/FuzzyPaws2/Views/Shared/_Layout.cshtml
@@ -77,8 +77,8 @@
                                 <a asp-controller="Appointment" 
                                   asp-action="Notification">
                                   <i class="bi bi-bell" 
-                                  style="color:yellow">
-                                  
+                                  style="color:yellow">°      
+                                        
                                         @*@if(Model.AllAppointments.Where(x => x.status == Status.Waiting)
                                                                  .Count()
                                                                  .Equals(0))
