--- a/FuzzyPaws2/Views/_ViewImports.cshtml
+++ b/FuzzyPaws2/Views/_ViewImports.cshtml
@@ -8,6 +8,8 @@
 @using FuzzyPaws2.ViewModels.MyPets
 @using FuzzyPaws2.ViewModels.Images
 @using FuzzyPaws2.ViewModels.Appointments
+@using FuzzyPaws2.ViewModels.Dashboard
 @using FuzzyPaws2.Areas.Identity.Pages.Account
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, FuzzyPaws2
