--- a/FuzzyPaws2/Views/Appointment/WaitingAppointments.cshtml
+++ b/FuzzyPaws2/Views/Appointment/WaitingAppointments.cshtml
@@ -3,7 +3,6 @@
 @{
     ViewData["Title"] = "Index";
 }
-
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
@@ -31,7 +30,7 @@ else
       <th scope="col"></th>
       <th scope="col">Time</th>
       <th scope="col">Description</th>
-      <th scope="col">Pet</th>
+      <th scope="col">Details</th>
       <th scope="col">Status</th>
             @if (User.IsInRole("Vet"))
             {
@@ -50,8 +49,8 @@ else
               <th scope="row"></th>
               <td>@appointment.Time</td>
               <td>@appointment.Description</td>
-              <td><a asp-controller="MyPet" asp-action="Details" asp-route-id="@appointment.MyPetId">
-                  @appointment.MyPetId
+              <td><a asp-controller="Appointment" asp-action="Details" asp-route-id="@appointment.Id">
+                  <i class="bi bi-three-dots"></i>
               </a></td>
               <td>@appointment.status</td>
               @if (User.IsInRole("Vet"))
