--- a/FuzzyPaws2/Views/Home/Index.cshtml
+++ b/FuzzyPaws2/Views/Home/Index.cshtml
@@ -1,30 +1,36 @@
-﻿
-<h1 class="display-4 text-center">Welcome to our Pet Shop</h1> <br />
+﻿@model HomeIndexViewModel
+<h1 class="display-4 text-center">Welcome to our Pet Shop</h1>
+<hr />
 
-<ajax-loader ajax-action="DashboardPins" ajax-controller="Home" id="dashboard-pins"></ajax-loader>
+<partial name="_DashboardPins" model="Model.dashboardViewModel" />
 
 <div class="text-center">
     <br />
-    <h2> Looking for a new fuzzy companion? <br />
-        Check out all available pets <i class="bi bi-arrow-right-circle"></i> <a asp-controller="Pet" asp-action="Index"> HERE </a></h2>
+    <h2>
+        Looking for a new fuzzy companion? <br />
+        Check out all available pets <i class="bi bi-arrow-right-circle"></i> <a asp-controller="Pet" asp-action="Index"> HERE </a>
+    </h2>
     <br />
 
-    <h3>Available pet products in our shop
+    <h3>
+        Available pet products in our shop
         <a asp-controller="Product" asp-action="Index">
-        <i class="bi bi-basket"></i>
+            <i class="bi bi-basket"></i>
         </a>
     </h3>
 
     <br />
 
-    <h3>Need a vet appointment? We got you! <br />        
+    <h3>
+        Need a vet appointment? We got you! <br />
     </h3>
-    <p>You can book an appointment
-       <a asp-controller="Appointment" asp-action="Index">here</a>
-       or talk to us directly via email  
-       <a asp-controller="Home" asp-action="Contact"><i class="bi bi-envelope-plus"></i></a>
+    <p>
+        You can book an appointment
+        <a asp-controller="Appointment" asp-action="Index">here</a>
+        or talk to us directly via email
+        <a asp-controller="Home" asp-action="Contact"><i class="bi bi-envelope-plus"></i></a>
     </p>
-    <img src="https://freepngdownload.com/image/thumb/cat-playing-png.png" class="img-fluid"/>
+    <img src="https://freepngdownload.com/image/thumb/cat-playing-png.png" class="img-fluid" />
 
 </div>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
