--- a/FuzzyPaws2/Views/Shared/_Layout.cshtml
+++ b/FuzzyPaws2/Views/Shared/_Layout.cshtml
@@ -103,7 +103,6 @@
             @RenderBody()
         </main>
     </div>
-
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - FuzzyPaws - <a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
@@ -115,3 +114,13 @@
     @RenderSection("Scripts", required: false)
 </body>
 </html>
+<script type="text/javascript">
+function myFunction () {
+    if (document.getElementById('pls').innerHTML == "There is no new waiting appointments.") {
+        console.log('No waiting appointments.');
+    } else {
+        console.log('You have a waiting appointment!');
+    }
+
+var interval = setInterval(function () { myFunction(); }, 10000);
+</script>
